Aligned non-closed issues to the left

--- a/assets/stylesheets/task_board.css
+++ b/assets/stylesheets/task_board.css
@@ -528,7 +528,7 @@ ul.condensed li {display: inline-block; margin-right: 1px; }
 #dist_summary tbody tr.member_issues table {width:100%;}
 #dist_summary tbody tr.member_issues thead th {border:1px solid #CCC; background-color:#CCC; padding:4px; white-space:nowrap;}
 #dist_summary tbody tr.member_issues tbody td {border:1px solid #CCC;}
-tr.issue td {background-color:#FFD;}
+tr.issue td {background-color:#FFD; text-align:left;}
 tr.closed_issue td {background-color:#CFC;}
 span.right {float:right;}
 span.left {float:left;}
